静态页面实现

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>vue-project</title>
     <link rel="stylesheet" href="/static/css/reset.css">
     <link rel="stylesheet" href="/src/common/stylus/mixins.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_518606_6676bmcalnrhehfr.css">
+    <style>
+      html{
+        touch-action: none;
+      }
+    </style>
     <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
     <script>
       if ('addEventListener' in document) {
